--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ navbar-links:
   About: #"aboutme"
     # - WHAM: "wham"
     # - MixSIAR: "mixsiar"   
-  Publications: "publications"
-    # - Published: "pubs" 
+  Publications: "blogs&publications"
+    # - blogs&Published: "pubs" 
   #Teaching: "teaching"
     # - Mixing models: "work-mixingmodels"
     # - Intro to R: "work-introR"
