--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
   twitter: DorisAfriyie2   # eg. daattali
   #reddit: yourname    # eg. daattali
   #google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: doris-afriyie-amoakohene  # eg. daattali
+  linkedin: dAmoak  # eg. daattali
   #xing: yourname      # eg. daattali
   #stackoverflow: yourlink  # eg. "3943160/daattali"
   #snapchat: yourname  # eg. daattali
