--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,8 @@ navbar-links:
   About: #"aboutme"
     # - WHAM: "wham"
     # - MixSIAR: "mixsiar"   
-  Publications: "blogs&publications"
+  Publications: "blogs & publications"
     # - blogs&Published: "pubs" 
-  #Teaching: "teaching"
-    # - Mixing models: "work-mixingmodels"
-    # - Intro to R: "work-introR"
   Research: "research"
     #- Medical Innovation Lab: "TDHocklab"    
     #- Scharfstein Lab: "Newlab"
@@ -38,6 +35,8 @@ navbar-links:
     #- Spatial bycatch prediction: "spatialbycatch"    
     #- Mixing models to estimate diet: "mixingmodels"
   Service: "service"
+  Semester_Scoop: "semester_scoop"
+  DAA_Chronicles: "daa_Chronicle"
   CV: "https://github.com/DorisAmoakohene/rberch.github.io/blob/master/pdf/Doris%20Afriyie%20Amoakohene-Official%20CV.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
