--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ navbar-links:
     #- Yue's Lab: "yue"
     #- Spatial bycatch prediction: "spatialbycatch"    
     #- Mixing models to estimate diet: "mixingmodels"
-  Service: "service"
+  Volunteering & Service: "Volunteering & Service"
   Semester_Scoop: "semester_scoop"
   DAA_Chronicles: "daa_Chronicle"
   CV: "https://github.com/DorisAmoakohene/rberch.github.io/blob/master/pdf/Doris%20Afriyie%20Amoakohene-Official%20CV.pdf"
