--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   About: #"aboutme"
     # - WHAM: "wham"
     # - MixSIAR: "mixsiar"   
-  Blogs & Publications: "blogs & publications"
+  Publications: "publications"
     # - blogs&Published: "pubs" 
   Research: "research"
     #- Medical Innovation Lab: "TDHocklab"    
@@ -34,7 +34,7 @@ navbar-links:
     #- Yue's Lab: "yue"
     #- Spatial bycatch prediction: "spatialbycatch"    
     #- Mixing models to estimate diet: "mixingmodels"
-  Volunteering & Service: "Volunteering & Service"
+  Volunteering: "Volunteer"
   Semester_Scoop: "semester_scoop"
   DAA_Chronicles: "daa_Chronicle"
   CV: "https://github.com/DorisAmoakohene/rberch.github.io/blob/master/pdf/Doris%20Afriyie%20Amoakohene-Official%20CV.pdf"
