--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navbar-links:
     # - MixSIAR: "mixsiar"   
   Publications: "publications"
     # - blogs&Published: "pubs" 
-  SkillB)x: "SkillB)x"
+  SkillBOx: "SkillBOx"
     #- Medical Innovation Lab: "TDHocklab"    
     #- Scharfstein Lab: "Newlab"
     #- Yue's Lab: "yue"
