--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ navbar-links:
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-# title-img: "img/big-img/Dorispic2.JPG"
+title-img: "img/big-img/Dorispic2.JPG"
 
 # --- Background colour/image options --- #
 
