--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ navbar-links:
     #- Mixing models to estimate diet: "mixingmodels"
   Volunteering: "Volunteer"
   SemesterScoop: "semester_scoop"
-  DAAChronicles: "daa_Chronicle"
+  Software: "Software"
   CV: "https://github.com/DorisAmoakohene/rberch.github.io/blob/master/pdf/Doris%20Afriyie%20Amoakohene-Official%20CV.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
